--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class = "container">
     <h1>Hello, world!</h1>
+      <a href="accordion.html">Accordion Page</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
