--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <style>
-    .container h1{margin-top:100px;}
-    </style>
+body{
+display: flex;
+  justify-content:center;
+  align-items:center;
+  min-height: 100vh;
+  margin:0;
+}
+    .container h1{
+      font-size: 3rem;
+      margin-top: 20px;
+    }
+  </style>
   </head>
   <body>
     <div class = "container">
