--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@ display: flex;
   </head>
   <body>
     <div class = "container">
-    <h1>Welcome to the Never-Land !!!</h1>
+    <h1>Welcome to the Never-Land - PeterPan!!!</h1>
+      <h2>We have :</h2>
+      <h2>* Fairies</h2>
+      <h2>* Pirates</h2>
+      <h2>* Kids <h2>
+      <h2>* Piccaninny tribe</h2>
       <a href="accordion.html">Accordion Page</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
