--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ display: flex;
   <body>
     <div class = "container">
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
-      <h2> A different fairytale where we never grow old. </h2>
+      <h2> A different fairytale, where we never grow old. </h2>
       <h2>* Fairies</h2>
       <h2>* Pirates</h2>
       <h2>* The lost kids <h2>
       <h2>* Piccaninny tribe</h2>
       <h2>* Mermaids</h2>
       <h2>* Crocodile</h2>
-     // <a href="accordion.html">Accordion Page</a>
+    
       <a href="fairries.html"> Fairies </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
