--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ display: flex;
       <h2>* Mermaids</h2>
       <h2>* Crocodile</h2>
     
-      <a href="fairries.html"> Fairies </a>
+      <h2><a href="fairries.html"> Fairies </a></h2>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
