--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@ display: flex;
   <body>
     <div class = "container">
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
-      <h2> A different fairytale, where we never grow old. </h2>
-      <h2>* Fairies</h2>
-      <h2>* Pirates</h2>
-      <h2>* The lost kids <h2>
-      <h2>* Piccaninny tribe</h2>
-      <h2>* Mermaids</h2>
-      <h2>* Crocodile</h2>
-    
-      <h2><a href="fairries.html"> Fairies </a></h2>
+      <h2> A different fairytale, where we never grow old. </h2>    
+         <h2><a href="fairries.html"> Fairies </a></h2>
+         <h2><a href="fairries.html"> Fairies </a></h2>
+         <h2><a href="Pirates.html"> Fairies </a></h2>
+         <h2><a href="The lost kids.html"> Fairies </a></h2>
+         <h2><a href=" Piccaninny Tribe.html"> Fairies </a></h2>
+         <h2><a href="Mermaids.html"> Fairies </a></h2>
+         <h2><a href="Crocodile.html"> Fairies </a></h2>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
