--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ display: flex;
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
       <h2> A different fairytale, where we never grow old. </h2>    
          <h2><a href="fairries.html"> Fairies </a></h2>
-         <h2><a href="Pirates.html"> Fairies </a></h2>
-         <h2><a href="The lost kids.html"> Fairies </a></h2>
-         <h2><a href=" Piccaninny Tribe.html"> Fairies </a></h2>
-         <h2><a href="Mermaids.html"> Fairies </a></h2>
-         <h2><a href="Crocodile.html"> Fairies </a></h2>
+         <h2><a href="Pirates.html"> Pirates </a></h2>
+         <h2><a href="The lost kids.html"> The Lost Kids </a></h2>
+         <h2><a href=" Piccaninny Tribe.html"> The Piccaninny Tribe </a></h2>
+         <h2><a href="Mermaids.html"> Mermaids </a></h2>
+         <h2><a href="Crocodile.html"> Crocodile </a></h2>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
