--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <style>
 body{
-display: flex;
+  display: flex;
   justify-content:center;
   align-items:center;
   min-height: 100vh;
   margin:0;
+  background-image:url ('C:\peterPan');
+  background-size: cover;
+  background-position: center;
 }
     .container h1{
       font-size: 3rem;
