--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body{
   align-items:center;
   min-height: 100vh;
   margin:0;
-  background-image:url ('https://giphy.com/gifs/friends-stop-london-lDR0wnXboVr8c');
+  background-image:url ('C:\peterPan.jpg');
   background-size: cover;
   background-position: center;
 }
