--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@ body{
   align-items:center;
   min-height: 100vh;
   margin:0;
-  background-image:url ('C:\\peterPan.jpg');
-  background-size: cover;
   background-position: center;
 }
     .container h1{
@@ -24,6 +22,7 @@ body{
   </head>
   <body>
     <div class = "container">
+      <img src = "https://giphy.com/gifs/friends-stop-london-lDR0wnXboVr8c.jpg" class = "img-fluid"  >
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
       <h2> A different fairytale, where we never grow old. </h2>    
          <h2><a href="fairries.html"> Fairies </a></h2>
