--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ body{
   min-height: 100vh;
   margin:0;
   background-position: center;
+  background-image: url('Pictures.jpg');
+  background-position:center;
+  background-size: cover;
 }
     .container h1{
       font-size: 3rem;
