--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
   min-height: 100vh;
   margin:0;
   background-position: center;
-  background-image: url('Pictures.jpg');
+  background-image: url('https://fineartamerica.com/featured/panoramic-view-of-annapurna-mountain-nepal-whimsy-art.html?product=poster.jpg');
   background-position:center;
   background-size: cover;
 }
