--- a/fairies.html
+++ b/fairies.html
@@ -1,1 +1,8 @@
-
+<p> Explore the magical world of fairies and their enchanting stories.</p>
+<img src="tinker-bell-pixie-pose-giclee-by-tim-rogerson-limited-edition-468113954137.html" alt="Fairy Image">
+<style>
+  .fairies-image {
+    width: 300px;
+    margin-top: 10px;
+  }
+</style>
