--- a/fairies.html
+++ b/fairies.html
@@ -1,2 +1,5 @@
-<p> Explore the magical world of fairies and their enchanting stories.</p>
 
+<picture>
+  <source srcset="tinker-bell-pixie-pose-giclee-by-tim-rogerson-limited-edition-468113954137.html" type="image/svg+xml">
+  <img src="..." class="img-fluid img-thumbnail" alt="...">
+</picture>
