--- a/fairies.html
+++ b/fairies.html
@@ -1,5 +1,3 @@
 
-<picture>
-  <source srcset="tinker-bell-pixie-pose-giclee-by-tim-rogerson-limited-edition-468113954137.html" type="image/svg+xml">
-  <img src="..." class="img-fluid img-thumbnail" alt="...">
-</picture>
+  <img src="tinkerbelll.png" class="img-fluid img-thumbnail" alt="image">
+
