--- a/fairies.html
+++ b/fairies.html
@@ -1,3 +1,8 @@
-
+<div class ="container">
+  <div class = "card" style="width": 18rem;">
   <img src="tinkerbelll.png" class="img-fluid img-thumbnail" alt="image">
-
+    <div class = "card-body">
+      <p class = "card-text">Tinker Bell</p>
+    </div>
+  </div>
+</div>
