--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body{
       <img src = "https://giphy.com/gifs/friends-stop-london-lDR0wnXboVr8c.jpg" class = "img-fluid"  >
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
       <h2> A different fairytale, where we never grow old. </h2>    
-         <h2><a href="fairries.html"> Fairies </a></h2>
+         <h2><a href="fairies.html"> Fairies </a></h2>
          <h2><a href="Pirates.html"> Pirates </a></h2>
          <h2><a href="The lost kids.html"> The Lost Kids </a></h2>
          <h2><a href=" Piccaninny Tribe.html"> The Piccaninny Tribe </a></h2>
