--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@ body{
          <h2><a href=" Piccaninny Tribe.html"> The Piccaninny Tribe </a></h2>
          <h2><a href="Mermaids.html"> Mermaids </a></h2>
          <h2><a href="Crocodile.html"> Crocodile </a></h2>
+
+      <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
