--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ body{
       <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h2 class="card-title">Fairies</h2>
+    <p class="card-text"> . More fairies.</p>
+    <a href="fairies.html" class="btn btn-primary">Let's go into the Fairy World !!!</a>
   </div>
 </div>
       
