--- a/index.html
+++ b/index.html
@@ -39,8 +39,53 @@ body{
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title">Fairies</h2>
-    <p class="card-text"> . More fairies.</p>
+    <p class="card-text"> More fairies.</p>
     <a href="fairies.html" class="btn btn-primary">Let's go into the Fairy World !!!</a>
+  </div>
+</div>
+
+            <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title">Pirates</h2>
+    <p class="card-text"> More Pirates.</p>
+    <a href="Pirates.html" class="btn btn-primary">Let's go into the Pirates World !!!</a>
+  </div>
+</div>
+
+                  <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title">The lost kids</h2>
+    <p class="card-text"> lost kids Profiles.</p>
+    <a href="The lost kids.html" class="btn btn-primary">Let's go into the kids World !!!</a>
+  </div>
+</div>
+
+                       <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title"> Piccaninny Tribe </h2>
+    <p class="card-text"> Piccaninny Tribe's World.</p>
+    <a href="Piccaninny Tribe.html" class="btn btn-primary"> Let's go into the Piccaninny Tribe World !!!</a>
+  </div>
+</div>
+
+                             <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title"> Mermaid </h2>
+    <p class="card-text"> The Sea World of Mermaid.</p>
+    <a href="Mermaids.html" class="btn btn-primary"> Let's go into the Sea World with Mermaids!!!</a>
+  </div>
+</div>
+
+                                   <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title"> Crocodile </h2>
+    <p class="card-text"> Wanna go into the scary crocodile World.</p>
+    <a href="Crocodile.html" class="btn btn-primary"> Crocodile World !!!</a>
   </div>
 </div>
       
