--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
   min-height: 100vh;
   margin:0;
   background-position: center;
-  background-image: url('https://fineartamerica.com/featured/panoramic-view-of-annapurna-mountain-nepal-whimsy-art.html?product=poster.jpg');
+  background-image: url('peterPan.png');
   background-position:center;
   background-size: cover;
 }
@@ -28,12 +28,6 @@ body{
       <img src = "https://giphy.com/gifs/friends-stop-london-lDR0wnXboVr8c.jpg" class = "img-fluid"  >
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
       <h2> A different fairytale, where we never grow old. </h2>    
-         <h2><a href="fairies.html"> Fairies </a></h2>
-         <h2><a href="Pirates.html"> Pirates </a></h2>
-         <h2><a href="The lost kids.html"> The Lost Kids </a></h2>
-         <h2><a href=" Piccaninny Tribe.html"> The Piccaninny Tribe </a></h2>
-         <h2><a href="Mermaids.html"> Mermaids </a></h2>
-         <h2><a href="Crocodile.html"> Crocodile </a></h2>
 
       <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
