--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body{
       <h2> A different fairytale, where we never grow old. </h2>    
 
       <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="AllFairy.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title">Fairies</h2>
     <p class="card-text"> More fairies.</p>
@@ -39,7 +39,7 @@ body{
 </div>
 
             <div class="card" style="width: 18rem;">
-  <img src="AllFairy.png" class="card-img-top" alt="...">
+  <img src="" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title">Pirates</h2>
     <p class="card-text"> More Pirates.</p>
