--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{
 </div>
 
             <div class="card" style="width: 18rem;">
-  <img src="" class="card-img-top" alt="...">
+  <img src="pirates.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title">Pirates</h2>
     <p class="card-text"> More Pirates.</p>
@@ -48,7 +48,7 @@ body{
 </div>
 
                   <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="lostkids.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title">The lost kids</h2>
     <p class="card-text"> lost kids Profiles.</p>
@@ -57,7 +57,7 @@ body{
 </div>
 
                        <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="tribe.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title"> Piccaninny Tribe </h2>
     <p class="card-text"> Piccaninny Tribe's World.</p>
@@ -66,7 +66,7 @@ body{
 </div>
 
                              <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="mermaids.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title"> Mermaid </h2>
     <p class="card-text"> The Sea World of Mermaid.</p>
@@ -75,10 +75,10 @@ body{
 </div>
 
                                    <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="crocodile.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title"> Crocodile </h2>
-    <p class="card-text"> Wanna go into the scary crocodile World.</p>
+    <p class="card-text"> Wanna go into the scary crocodile World. FORBIDDEN WORLD FOR KIDS !!!.</p>
     <a href="Crocodile.html" class="btn btn-primary"> Crocodile World !!!</a>
   </div>
 </div>
