--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ body{
     </form>
   </div>
 </nav>
-    
+ </body>
+  <body>
     <div class = "container">
       <img src = "https://giphy.com/gifs/friends-stop-london-lDR0wnXboVr8c.jpg" class = "img-fluid"  >
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
