--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body{
   min-height: 20vh;
   margin:0;
   background-position: center;
-  background-image: url('PeterPanStatic.png');
+  background-image: url('peterPan.png');
   background-position:center;
   background-size: cover;
 }
