--- a/fairies.html
+++ b/fairies.html
@@ -3,6 +3,8 @@
   <img src="tinkerbelll.png" class="img-fluid img-thumbnail" alt="image">
     <div class = "card-body">
       <p class = "card-text">Tinker Bell</p>
+          <a href="accordian.html" class="btn btn-primary"> List all fairies !!!</a>
+
     </div>
   </div>
 </div>
