--- a/fairies.html
+++ b/fairies.html
@@ -1,10 +1,3 @@
-<div class ="container">
-  <div class = "card" style="width": 12rem;">
-  <img src="tinkerbelll.png" class="img-fluid img-thumbnail" alt="image">
-    <div class = "card-body">
-      <p class = "card-text">Tinker Bell</p>
-          <p> List all fairies !!!</p>
 
-    </div>
-  </div>
-</div>
+      <a href="listFairies.html" class="btn btn-primary"> List all fairies !!!</a>
+   
