--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body{
   <div class="card-body">
     <h2 class="card-title">Fairies</h2>
     <p class="card-text"> More fairies.</p>
-    <a href="fairies.html" class="btn btn-primary">Let's go into the Fairy World !!!</a>
+    <a href="listFairies.html" class="btn btn-primary">Let's go into the Fairy World !!!</a>
   </div>
 </div>
 
