--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+
+    <div class = "navs">
+      <nav>
+        <ul>
+          <li><a href = "">Page1</a></li>
+          <li><a href = "">Page2</a></li>
+          <li><a href = "">Page3</a></li>
+          <li><a href = "">Page4</a></li>
+          <li><a href = "">Page5</a></li>         
+        </ul>
+      </nav>
+    </div>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <style>
 body{
