--- a/index.html
+++ b/index.html
@@ -5,18 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-
-    <div class = "navs">
-      <nav>
-        <ul>
-          <li><a href = "">Page1</a></li>
-          <li><a href = "">Page2</a></li>
-          <li><a href = "">Page3</a></li>
-          <li><a href = "">Page4</a></li>
-          <li><a href = "">Page5</a></li>         
-        </ul>
-      </nav>
-    </div>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <style>
@@ -39,55 +27,51 @@ body{
     
   </head>
   <body>
-    --nav bar here
+ --nav here
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
+            Dropdown
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
       </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
   </div>
 </nav>
+    --nav ended
 
-    <nav class="navbar bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand">Navbar</a>
-    <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-
-    <div class = "container">
+<div class = "container">
       <img src = "https://giphy.com/gifs/friends-stop-london-lDR0wnXboVr8c.jpg" class = "img-fluid"  >
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
       <h2> A different fairytale, where we never grow old. </h2>    
 
-      <div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;">
   <img src="AllFairy.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title">Fairies</h2>
@@ -96,7 +80,7 @@ body{
   </div>
 </div>
 
-            <div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;">
   <img src="pirates.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title">Pirates</h2>
@@ -105,7 +89,7 @@ body{
   </div>
 </div>
 
-                  <div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;">
   <img src="lostkids.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title">The lost kids</h2>
@@ -114,7 +98,7 @@ body{
   </div>
 </div>
 
-                       <div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;">
   <img src="tribe.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title"> Piccaninny Tribe </h2>
@@ -123,7 +107,7 @@ body{
   </div>
 </div>
 
-                             <div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;">
   <img src="mermaids.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title"> Mermaid </h2>
@@ -132,7 +116,7 @@ body{
   </div>
 </div>
 
-                                   <div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;">
   <img src="crocodile.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title"> Crocodile </h2>
