--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@ body{
   background-position:center;
   background-size: cover;
 }
-    .container h1{
-      font-size: 3rem;
-      margin-top: 20px;
-    }
+.container h1{
+  font-size: 3rem;
+  margin-top: 20px;
+}
   </style>
     
   </head>
   <body>
  --nav here
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@ body{
     --nav ended
 
 <div class = "container">
-      <img src = "https://giphy.com/gifs/friends-stop-london-lDR0wnXboVr8c.jpg" class = "img-fluid"  >
+      <img src = "https://giphy.com/gifs/friends-stop-london-lDR0wnXboVr8c.jpg" class = "img-fluid"  />
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
       <h2> A different fairytale, where we never grow old. </h2>    
 
