--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <style>
+body{
 
+  background-image: url('peterPan.png');
+  background-size: cover;
+}
+ 
   </style>
     
   </head>
   <body>
- --nav here
+ 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -50,7 +55,6 @@
     </div>
   </div>
 </nav>
-    --nav ended
 
 <div class = "container">
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
