--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body{
   </head>
   <body>
  
-<nav class="navbar navbar-light bg-light navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
