--- a/listFairies.html
+++ b/listFairies.html
@@ -1,56 +1,83 @@
-<!doctype html> 
-<html lang="en"> 
-  <head> 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> 
-  </head> 
-  <body> 
-    <div class = "container"> <div class="accordion" id="accordionPanelsStayOpenExample"> 
-      <div class="accordion-item"> <h2 class="accordion-header"> 
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne"> Accordion Item #1 </button>
-      </h2> <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-        <div class="accordion-body"> 
-          <strong>This is the first item's accordion body.</strong> 
-          It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow. 
-        </div> 
-      </div> 
-      </div> 
-      <div class="accordion-item"> 
-        <h2 class="accordion-header"> 
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo"> Accordion Item #2 </button>
-        </h2> 
-        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"> 
-          <div class="accordion-body"> 
-            <strong>This is the second item's accordion body.</strong> 
-            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow. 
-          </div> 
-        </div> 
-      </div> 
-      <div class="accordion-item"> 
-        <h2 class="accordion-header"> 
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree"> Accordion Item #3 </button> 
-        </h2> 
-        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-          <div class="accordion-body"> 
-            <strong>This is the third item's accordion body.</strong> 
-            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow. 
-          </div> 
-        </div> 
-      </div> 
-       <div class="accordion-item"> 
-        <h2 class="accordion-header"> 
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour"> Accordion Item #4 </button>
-        </h2> 
-        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"> 
-          <div class="accordion-body"> 
-            <strong>This is the fourth item's accordion body.</strong> 
-            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow. 
-          </div> 
-        </div> 
-      </div> 
-    </div> 
-    </div> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body> 
-</html>
+<div class="container mt-4">
+    <h1>Fairies are also known as Pixies. They can fly, perform magic !!!</h1>
+    <h2>Welcome to Fairy land.</h2>    
+
+    <div class="row">
+        <!-- Card 1 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="tinkerbelll.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2 class="card-title">Tinker Bell</h2>
+                    <p class="card-text">More fairies.</p>
+                    <a href="listFairies.html" class="btn btn-primary">Tinker Bell is the most iconic fairy in the story. 
+                      She is known for her loyalty to Peter Pan and her ability to emit a tinkling sound. !!!</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="pirates.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2 class="card-title">Silvermist</h2>
+                    <p class="card-text">More Pirates.</p>
+                    <a href="Pirates.html" class="btn btn-primary">Silvermist is a water-talent fairy who can manipulate and control water. 
+                      She is known for her kind and calm demeanor.!!!</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="lostkids.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2 class="card-title">Rosetta</h2>
+                    <p class="card-text">Lost kids Profiles.</p>
+                    <a href="The lost kids.html" class="btn btn-primary">Rosetta is a garden-talent fairy. 
+                      She has the ability to make plants grow and bloom. 
+                      She is often associated with flowers and gardens.!!!</a>
+                </div>
+            </div>
+        </div>
+
+       <!-- Card 4 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                 <img src="tribe.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title"> Iridessa </h2>
+    <p class="card-text"> Piccaninny Tribe's World.</p>
+    <a href="Piccaninny Tribe.html" class="btn btn-primary"> Iridessa is a light-talent fairy. 
+      She has the power to control and manipulate light, often using it to create beautiful displays. !!!</a>
+  </div>
+            </div>
+        </div>
+
+       <!-- Card 5 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                 <img src="mermaids.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title"> Fawn </h2>
+    <p class="card-text"> The Sea World of Mermaid.</p>
+    <a href="Mermaids.html" class="btn btn-primary"> Fawn is an animal-talent fairy. 
+      She has the ability to communicate with and befriend animals, often caring for the creatures of Neverland.!!!</a>
+  </div>
+            </div>
+        </div>
+
+       <!-- Card 6 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+               <img src="crocodile.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title"> Vidia </h2>
+    <p class="card-text"> Wanna go into the scary crocodile World. FORBIDDEN WORLD FOR KIDS !!!.</p>
+    <a href="Crocodile.html" class="btn btn-primary"> Vidia is a fast-flying fairy with a competitive and sometimes mischievous personality. 
+      She has a talent for speed and agility. !!!</a>
+  </div>
+        </div>
+        </div>
