--- a/listFairies.html
+++ b/listFairies.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pixies</title>
+
+<body>
 <div class="container mt-4">
     <h1>Fairies are also known as Pixies. They can fly, perform magic !!!</h1>
     <h2>Welcome to Fairy land.</h2>    
@@ -81,3 +89,6 @@
   </div>
         </div>
         </div>
+
+    </body>
+    </html>
