--- a/listFairies.html
+++ b/listFairies.html
@@ -78,10 +78,10 @@
         </div>
 
        <!-- Card 6 -->
-        <div class="col-md-4 mb-4">
-            <div class="card">
-               <img src="crocodile.png" class="card-img-top" alt="...">
-  <div class="card-body">
+<div class="col-md-4 mb-4">
+    <div class="card">
+    <img src="crocodile.png" class="card-img-top" alt="...">
+    <div class="card-body">
     <h2 class="card-title"> Vidia </h2>
     <p class="card-text"> Wanna go into the scary crocodile World. FORBIDDEN WORLD FOR KIDS !!!.</p>
     <a href="Crocodile.html" class="btn btn-primary"> Vidia is a fast-flying fairy with a competitive and sometimes mischievous personality. 
@@ -89,6 +89,10 @@
   </div>
         </div>
         </div>
+</div>
+</div>
+    
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
     </html>
