--- a/listFairies.html
+++ b/listFairies.html
@@ -12,7 +12,7 @@
     background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity))!important;
 }
 body{
-  background-image: url('peterPan.png');
+  background-image: url('AllFairy.png');
   background-size: cover;
 }
  
@@ -62,15 +62,17 @@ body{
     <h1>Welcome to the NeverLand - PeterPan !!!</h1>
     <h2>A different fairytale, where we never grow old.</h2>    
 
-    <div class="row">
+        
+         <div class="row">
         <!-- Card 1 -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="AllFairy.png" class="card-img-top" alt="...">
+                <img src="tinkerbelll.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h2 class="card-title">Fairies</h2>
+                    <h2 class="card-title">Tinker Bell</h2>
                     <p class="card-text">More fairies.</p>
-                    <a href="listFairies.html" class="btn btn-primary">Let's go into the Fairy World !!!</a>
+                    <a href="listFairies.html" class="btn btn-primary">Tinker Bell is the most iconic fairy in the story. 
+                      She is known for her loyalty to Peter Pan and her ability to emit a tinkling sound. !!!</a>
                 </div>
             </div>
         </div>
