--- a/listFairies.html
+++ b/listFairies.html
@@ -81,11 +81,11 @@ body{
     <!-- Card 2 -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="pirates.png" class="card-img-top" alt="...">
+                <img src="silvermist.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2 class="card-title">Silvermist</h2>
                     <p class="card-text">More Pirates.</p>
-                    <a href="Pirates.html" class="btn btn-primary">Silvermist is a water-talent fairy who can manipulate and control water. 
+                    <a href="silvermist.html" class="btn btn-primary">Silvermist is a water-talent fairy who can manipulate and control water. 
                       She is known for her kind and calm demeanor.!!!</a>
                 </div>
             </div>
