--- a/listFairies.html
+++ b/listFairies.html
@@ -59,8 +59,8 @@ body{
 </nav>
 
 <div class="container mt-4">
-    <h1>Welcome to the NeverLand - PeterPan !!!</h1>
-    <h2>A different fairytale, where we never grow old.</h2>    
+    <h1>Welcome to the Fairies Home - PeterPan !!!</h1>
+    <h2>Fairies are residents of NeverLand. Fairies have their own specialized magical powers.</h2>    
 
         
          <div class="row">
@@ -70,7 +70,7 @@ body{
                 <img src="tinkerbelll.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2 class="card-title">Tinker Bell</h2>
-                    <p class="card-text">More fairies.</p>
+                    <p class="card-text">Tinker Bell             $2.</p>
                     <a href="listFairies.html" class="btn btn-primary">Tinker Bell is the most iconic fairy in the story. 
                       She is known for her loyalty to Peter Pan and her ability to emit a tinkling sound. !!!</a>
                 </div>
@@ -84,7 +84,7 @@ body{
                 <img src="silvermist.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2 class="card-title">Silvermist</h2>
-                    <p class="card-text">More Pirates.</p>
+                    <p class="card-text">Silvermist             $2.</p>
                     <a href="silvermist.html" class="btn btn-primary">Silvermist is a water-talent fairy who can manipulate and control water. 
                       She is known for her kind and calm demeanor.!!!</a>
                 </div>
@@ -94,10 +94,10 @@ body{
         <!-- Card 3 -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="lostkids.png" class="card-img-top" alt="...">
+                <img src="rosetta.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2 class="card-title">Rosetta</h2>
-                    <p class="card-text">Lost kids Profiles.</p>
+                    <p class="card-text">Rosetta             $2.</p>
                     <a href="The lost kids.html" class="btn btn-primary">Rosetta is a garden-talent fairy. 
                       She has the ability to make plants grow and bloom. 
                       She is often associated with flowers and gardens.!!!</a>
@@ -108,11 +108,11 @@ body{
        <!-- Card 4 -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                 <img src="tribe.png" class="card-img-top" alt="...">
+                 <img src="Iridesa.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title"> Iridessa </h2>
-    <p class="card-text"> Piccaninny Tribe's World.</p>
-    <a href="Piccaninny Tribe.html" class="btn btn-primary"> Iridessa is a light-talent fairy. 
+    <p class="card-text"> Iridessa                   $2.</p>
+    <a href="Iridesa.html" class="btn btn-primary"> Iridessa is a light-talent fairy. 
       She has the power to control and manipulate light, often using it to create beautiful displays. !!!</a>
   </div>
             </div>
@@ -121,11 +121,11 @@ body{
        <!-- Card 5 -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                 <img src="mermaids.png" class="card-img-top" alt="...">
+                 <img src="fawn.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h2 class="card-title"> Fawn </h2>
-    <p class="card-text"> The Sea World of Mermaid.</p>
-    <a href="Mermaids.html" class="btn btn-primary"> Fawn is an animal-talent fairy. 
+    <p class="card-text"> Fawn         $2.</p>
+    <a href="fawn.html" class="btn btn-primary"> Fawn is an animal-talent fairy. 
       She has the ability to communicate with and befriend animals, often caring for the creatures of Neverland.!!!</a>
   </div>
             </div>
@@ -134,11 +134,11 @@ body{
        <!-- Card 6 -->
 <div class="col-md-4 mb-4">
     <div class="card">
-    <img src="crocodile.png" class="card-img-top" alt="...">
+    <img src="vidia.png" class="card-img-top" alt="...">
     <div class="card-body">
     <h2 class="card-title"> Vidia </h2>
-    <p class="card-text"> Wanna go into the scary crocodile World. FORBIDDEN WORLD FOR KIDS !!!.</p>
-    <a href="Crocodile.html" class="btn btn-primary"> Vidia is a fast-flying fairy with a competitive and sometimes mischievous personality. 
+    <p class="card-text"> Vidia             $2 !!!.</p>
+    <a href="vidia.html" class="btn btn-primary"> Vidia is a fast-flying fairy with a competitive and sometimes mischievous personality. 
       She has a talent for speed and agility. !!!</a>
   </div>
         </div>
