--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body{
                 <div class="card-body">
                     <h2 class="card-title">Pirates</h2>
                     <p class="card-text">More Pirates.</p>
-                    <a href="Pirates.html" class="btn btn-primary">Let's go into the Pirates World !!!</a>
+                    <a href="listPirates.html" class="btn btn-primary">Let's go into the Pirates World !!!</a>
                 </div>
             </div>
         </div>
