--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body{
                 <div class="card-body">
                     <h2 class="card-title">The lost kids</h2>
                     <p class="card-text">Lost kids Profiles.</p>
-                    <a href="The lost kids.html" class="btn btn-primary">Let's go into the kids World !!!</a>
+                    <a href="listLostKids.html" class="btn btn-primary">Let's go into the kids World !!!</a>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@ body{
   <div class="card-body">
     <h2 class="card-title"> Piccaninny Tribe </h2>
     <p class="card-text"> Piccaninny Tribe's World.</p>
-    <a href="Piccaninny Tribe.html" class="btn btn-primary"> Let's go into the Piccaninny Tribe World !!!</a>
+    <a href="listPiccaninnyTribe.html" class="btn btn-primary"> Let's go into the Piccaninny Tribe World !!!</a>
   </div>
             </div>
         </div>
@@ -118,7 +118,7 @@ body{
   <div class="card-body">
     <h2 class="card-title"> Mermaid </h2>
     <p class="card-text"> The Sea World of Mermaid.</p>
-    <a href="Mermaids.html" class="btn btn-primary"> Let's go into the Sea World with Mermaids!!!</a>
+    <a href="listMermaids.html" class="btn btn-primary"> Let's go into the Sea World with Mermaids!!!</a>
   </div>
             </div>
         </div>
@@ -130,7 +130,7 @@ body{
   <div class="card-body">
     <h2 class="card-title"> Crocodile </h2>
     <p class="card-text"> Wanna go into the scary crocodile World. FORBIDDEN WORLD FOR KIDS !!!.</p>
-    <a href="Crocodile.html" class="btn btn-primary"> Crocodile World !!!</a>
+    <a href="listCrocodile.html" class="btn btn-primary"> Crocodile World !!!</a>
   </div>
         </div>
         </div>
