--- a/listLostKids.html
+++ b/listLostKids.html
@@ -67,7 +67,7 @@ body{
         <!-- Card 1 (Tootles) -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="tootles.png" class="card-img-top" alt="...">
+                <img src="Tootles.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2 class="card-title">Tootles</h2>
                     <p class="card-text">Tootles             $2.</p>
