--- a/listLostKids.html
+++ b/listLostKids.html
@@ -129,11 +129,11 @@ body{
         <!-- Card 6 (Toodles) -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                 <img src="toodles.png" class="card-img-top" alt="...">
+                 <img src="tootlesBrother.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h2 class="card-title">Toodles</h2>
-                    <p class="card-text">Toodles             $2 !!!.</p>
-                    <a href="toodles.html" class="btn btn-primary">Toodles is one of the Lost Boys known for his distinct hat with a propeller. He is often depicted as the youngest and most innocent of the group. !!!</a>
+                    <h2 class="card-title">Tootle's Brother</h2>
+                    <p class="card-text">Tootles Brother             $2 !!!.</p>
+                    <a href="tootlesBrother.html" class="btn btn-primary">Toodles is one of the Lost Boys known for his distinct hat with a propeller. He is often depicted as the youngest and most innocent of the group. !!!</a>
                 </div>
             </div>
         </div>
