--- a/listPiccaninnyTribe.html
+++ b/listPiccaninnyTribe.html
@@ -105,11 +105,11 @@ body{
 
            <div class="col-md-4 mb-4">
     <div class="card">
-        <img src="greatbiglittlepanther.png" class="card-img-top" alt="...">
+        <img src="tigerLily.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h2 class="card-title">Tiger Lily </h2>
             <p class="card-text">Tiger Lily             $2.</p>
-            <a href="greatbiglittlepanther.html" class="btn btn-primary"> Tiger Lily is the princess of the tribe and plays a significant role in the story. She is known for her bravery and is captured by Captain Hook but later rescued by Peter Pan and the Lost Boys. Tiger Lily is a beloved character in the Peter Pan mythology and is depicted as a strong and independent character. !!!</a>
+            <a href="tigerLily.html" class="btn btn-primary"> Tiger Lily is the princess of the tribe and plays a significant role in the story. She is known for her bravery and is captured by Captain Hook but later rescued by Peter Pan and the Lost Boys. Tiger Lily is a beloved character in the Peter Pan mythology and is depicted as a strong and independent character. !!!</a>
         </div>
     </div>
 </div>
