--- a/listPiccaninnyTribe.html
+++ b/listPiccaninnyTribe.html
@@ -63,19 +63,6 @@ body{
     <h2>Fairies are residents of NeverLand. Fairies have their own specialized magical powers.</h2>    
 
         
-         <div class="row">
-        <!-- Card 1 -->
-        <div class="col-md-4 mb-4">
-            <div class="card">
-                <img src="littlepanther.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h2 class="card-title">Little Panther</h2>
-                    <p class="card-text">Little Panther             $2.</p>
-                    <a href="listFairies.html" class="btn btn-primary">Little Panther is a magical fairy in the story. 
-                      She is known for her loyalty to Peter Pan and her unique abilities. !!!</a>
-                </div>
-            </div>
-        </div>
 
     <!-- Card 2 -->
 <div class="col-md-4 mb-4">
@@ -93,7 +80,7 @@ body{
 <!-- Card 3 -->
 <div class="col-md-4 mb-4">
     <div class="card">
-        <img src="greatbiglittlepanther.png" class="card-img-top" alt="...">
+        <img src="GreatBigLittlePanther.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h2 class="card-title">Great Big Little Panther</h2>
             <p class="card-text">Great Big Little Panther             $2.</p>
