--- a/listPiccaninnyTribe.html
+++ b/listPiccaninnyTribe.html
@@ -59,23 +59,9 @@ body{
 </nav>
 
 <div class="container mt-4">
-    <h1>Welcome to the Fairies Home - PeterPan !!!</h1>
-    <h2>Fairies are residents of NeverLand. Fairies have their own specialized magical powers.</h2>    
+    <h1>Welcome to the Piccaninny Tribe - PeterPan !!!</h1>
+    <p>The Piccaninny Tribe is led by the character Great Big Little Panther, and Tiger Lily is their princess. They are portrayed as one of the various groups of inhabitants in Neverland. It's important to note that the depiction of the Piccaninny Tribe in the original story contains racial stereotypes and cultural insensitivity that are considered offensive today. These portrayals have been criticized for perpetuating harmful stereotypes about Native Americans. Please keep in mind that the portrayal of the Piccaninny Tribe in this work is not trying to promote any stereotypes about Native Americans. It is just for fun, for kids too young to understand racial sterotypes.</p>    
 
-        
-
-    <!-- Card 2 -->
-<div class="col-md-4 mb-4">
-    <div class="card">
-        <img src="nibs.png" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h2 class="card-title">Nibs</h2>
-            <p class="card-text">Nibs             $2.</p>
-            <a href="nibs.html" class="btn btn-primary">Nibs is a brave member of the tribes. 
-              He is known for his adventurous spirit and courage. !!!</a>
-        </div>
-    </div>
-</div>
 
 <!-- Card 3 -->
 <div class="col-md-4 mb-4">
