--- a/listMermaids.html
+++ b/listMermaids.html
@@ -67,7 +67,7 @@ body{
         <!-- Card 1 -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="mermaid1.jpg" class="card-img-top" alt="...">
+                <img src="aquaticSisters.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2 class="card-title">Aquatic Sisters</h2>
                     <p class="card-text">The Aquatic Sisters are known for their beauty and enchanting songs that can be heard by those who venture near their lagoon.</p>
@@ -80,7 +80,7 @@ body{
     <!-- Card 2 -->
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="red-haired-mermaid.jpg" class="card-img-top" alt="...">
+                <img src="red-haired-mermaid.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2 class="card-title">Red-haired Mermaid</h2>
                     <p class="card-text">Red-haired mermaid, known for her distinct appearance.</p>
