--- a/listPiccaninnyTribe.html
+++ b/listPiccaninnyTribe.html
@@ -12,8 +12,8 @@
     background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity))!important;
 }
 body{
-  background-image: url('AllFairy.png');
   background-size: cover;
+    background-color: offwhite;
 }
  
   </style>
@@ -23,7 +23,7 @@ body{
  
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="index.html">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
