--- a/listPirates.html
+++ b/listPirates.html
@@ -12,7 +12,7 @@
     background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity))!important;
 }
 body{
-  background-image: url('AllFairy.png');
+  background-color: lightred;
   background-size: cover;
 }
  
@@ -23,7 +23,7 @@ body{
  
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
