--- a/listPiccaninnyTribe.html
+++ b/listPiccaninnyTribe.html
@@ -23,7 +23,7 @@ body{
  
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Navbar</a>
+    <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -85,6 +85,7 @@ body{
             <a href="tigerLily.html" class="btn btn-primary"> Tiger Lily is the princess of the tribe and plays a significant role in the story. She is known for her bravery and is captured by Captain Hook but later rescued by Peter Pan and the Lost Boys. Tiger Lily is a beloved character in the Peter Pan mythology and is depicted as a strong and independent character. !!!</a>
         </div>
     </div>
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
