--- a/listPirates.html
+++ b/listPirates.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Neverland: Pirates</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <style>  
@@ -12,7 +12,7 @@
     background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity))!important;
 }
 body{
-  background-color: lightred;
+  background-color: maroon;
   background-size: cover;
 }
  
