--- a/index.html
+++ b/index.html
@@ -135,7 +135,18 @@ body{
   </div>
         </div>
         </div>
-        
+      <div class="row">
+        <!-- Card 7 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="PeterPanStatic.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2 class="card-title">Peter Pan Stories</h2>
+                    <p class="card-text">...</p>
+                    <a href="Story.html" class="btn btn-primary">Click For Stories</a>
+                </div>
+            </div>
+        </div>  
       
     </div>
 </div>
