--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@ body{
   </div>
         </div>
         </div>
+         <!-- Card 4 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                 <img src="tribe.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h2 class="card-title"> Piccaninny Tribe </h2>
+    <p class="card-text"> Piccaninny Tribe's World.</p>
+    <a href="listPiccaninnyTribe.html" class="btn btn-primary"> Let's go into the Piccaninny Tribe World !!!</a>
+  </div>
+            </div>
+        </div>
          <div class="row">
         <!-- Card 1 -->
         <div class="col-md-4 mb-4">
