--- a/index.html
+++ b/index.html
@@ -209,7 +209,6 @@ body{
   </div>
         </div>
         </div>
-      <div class="row">
         <!-- Card 11 -->
         <div class="col-md-4 mb-4">
             <div class="card">
@@ -221,7 +220,41 @@ body{
                 </div>
             </div>
         </div>  
-      <div class="row">
+                  <!-- Card 1 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="AllFairy.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2 class="card-title">Fairies</h2>
+                    <p class="card-text">More fairies.</p>
+                    <a href="listFairies.html" class="btn btn-primary">Let's go into the Fairy World !!!</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="pirates.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2 class="card-title">Pirates</h2>
+                    <p class="card-text">More Pirates.</p>
+                    <a href="listPirates.html" class="btn btn-primary">Let's go into the Pirates World !!!</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="lostkids.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2 class="card-title">The lost kids</h2>
+                    <p class="card-text">Lost kids Profiles.</p>
+                    <a href="listLostKids.html" class="btn btn-primary">Let's go into the kids World !!!</a>
+                </div>
+            </div>
+        </div>
         <!-- Card 11 -->
         <div class="col-md-4 mb-4">
             <div class="card">
