--- a/listPiccaninnyTribe.html
+++ b/listPiccaninnyTribe.html
@@ -61,7 +61,7 @@ body{
     <h1>Welcome to the Piccaninny Tribe - PeterPan !!!</h1>
     <p>The Piccaninny Tribe is led by the character Great Big Little Panther, and Tiger Lily is their princess. They are portrayed as one of the various groups of inhabitants in Neverland. It's important to note that the depiction of the Piccaninny Tribe in the original story contains racial stereotypes and cultural insensitivity that are considered offensive today. These portrayals have been criticized for perpetuating harmful stereotypes about Native Americans. Please keep in mind that the portrayal of the Piccaninny Tribe in this work is not trying to promote any stereotypes about Native Americans. It is just for fun, for kids too young to understand racial sterotypes.</p>    
 
-
+<div class="row">
 <!-- Card 3 -->
 <div class="col-md-4 mb-4">
     <div class="card">
@@ -84,6 +84,7 @@ body{
             <a href="tigerLily.html" class="btn btn-primary"> Tiger Lily is the princess of the tribe and plays a significant role in the story. She is known for her bravery and is captured by Captain Hook but later rescued by Peter Pan and the Lost Boys. Tiger Lily is a beloved character in the Peter Pan mythology and is depicted as a strong and independent character. !!!</a>
         </div>
     </div>
+</div>
 </div>
 </div>
 
